--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,12 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
+.grid-card {
+    margin-top: 100px;
+}
+.my-calendar {
+    margin-top: 50px;
+}
